chore(blog): bump SpringBoot & SpringAI